--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	html, body, #app {
 	  /* height: 100%; */
 	  margin: 0;
-	  background-color: aliceblue !important;
+	  background-color: rgb(222, 218, 233) !important;
 	}
 
 </style>
