--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html class="has-navbar-fixed-top" lang="en">
 <head>
  <meta charset="utf-8">
  <title>My React App from Scratch</title>
@@ -14,6 +14,18 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+<style>
+	@media screen and (min-width: 1024px) {
+	.container {
+		max-width: 720px;
+	}
+
+}
+	div.icon-text {
+		min-width: fit-content;
+	}
+
+</style>
 </head>
 <body>
  <div id="app"></div>
