section element are now centered nicely

--- a/src/index.html
+++ b/src/index.html
@@ -15,16 +15,23 @@
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 <style>
-	@media screen and (min-width: 1024px) {
-	.container {
-		max-width: 720px;
-	}
 
-}
+	@media screen and (min-width: 1024px) {
+		.container {
+			max-width: 660px;
+		}
+	}
 	div.icon-text {
 		min-width: fit-content;
 	}
 
+	
+	section.section {
+		min-height: 92vh;
+		align-items: center;
+	}
+
+	
 </style>
 </head>
 <body>
