--- a/src/index.html
+++ b/src/index.html
@@ -1,38 +1,12 @@
 <!doctype html>
-<html class="has-navbar-fixed-top" lang="en">
+<html lang="en">
 <head>
  <meta charset="utf-8">
- <title>My React App from Scratch</title>
- <style>
-	html, body, #app {
-	  /* height: 100%; */
-	  margin: 0;
-	  background-color: rgb(222, 218, 233) !important;
-	}
-
-</style>
+ <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+ <title>Todomatic</title>
+ <link rel="stylesheet" href="css/todomatic.css">
  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-<style>
-
-	@media screen and (min-width: 1024px) {
-		.container {
-			max-width: 660px;
-		
-		}
-
-		section.section {
-		min-height: 92vh;
-		align-items: center;
-		}
-
-		div.icon-text {
-			min-width: fit-content;
-		}
-	}
-	
-</style>
 </head>
 <body>
  <div id="app"></div>
